   	is actually "SPF fail < dns-gl = CONTENT".


   +	CONN like command for forward host connections.

   +	Use SIZE= to by-pass SpamAssassin and/or the length of the temp.
   	file to by-pass when spamd-max-size is being used. Steve F.

--2.3.18--

   !	accessPattern: Fixed missing access_word_to_code for regular
   	expression pattern/action. Oversight from 2.3.15 update.


--2.3.17--

   !	Fix segmentation fault due to verb +smtp-dot.

   +	Add test and rejection for HELO being used in combination with
	MAIL or RCPT parameters.

   !	cmdMail: always attempt to connect with EHLO first and fall back
	on HELO otherwise.

   !	Detect and reject BINARYMIME.

   !	cmdRcpt: tweak MAIL FROM: to relay BODY=8BITMIME; we still do NOT
   	support conversion (only pass through) when the forward host does
   	not support 8BITMIME.

--2.3.16--

   *	Requires Libsnert 1.74.1

   !	Replace old LibSnert server list/queue code with LibSnert's
	thread-safe queue API.

--2.3.15--

   *	Requires Libsnert 1.73.19

   !	accessPattern: Fix segmentation fault when parsing the pattern
	lists and there is a syntax error. For example:

   		[82.97.10.32/29/OK	syntax error causes seg. fault.

   		[82.97.10.32/29]OK	correct version works

	Affects all three pattern types [.../..], !...!, and /.../.
	Reported by Quentin Campbell.

   !	Allow FORWARD: route to connect to multi-homed host name.
	Reported by Steve Freegard.

   !	Define AccessCode enum type to be used in place of SMDB_ACCESS_
   	constants, which no longer reflect the variety of action words
   	available in smtpf. Replaced smdbAccessCode by access_word_to_code.

   !	Replaced generic int return of many filter functions to make
	clear the distinction between either AccessCode or SmtpfCode so
	as to avoid confusion and make use of compliler type checking.
	*** This switch over is not complete.

   +	Implemented OK+AV access action word as a means to by-pass all
	tests including anti-virus scanning. Requested by Quentin